# intrusion

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.claude/skills/: README.md
.claude/skills/artifact-build/: SKILL.md  assemble.py  verify.mjs
.claude/skills/create-tickets/: SKILL.md
.claude/skills/playtest/: SKILL.md  baseline.json
.claude/skills/survey/: SKILL.md
.claude/skills/work-ticket/: SKILL.md
.github/workflows/: ci.yml  pages.yml
ci/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: ability.rs  beat.rs  body.rs  category.rs  cell.rs  cover.rs  door.rs  duct.rs  facility.rs  generate.rs  guard.rs  input.rs  lib.rs  path.rs  place.rs  radio.rs  region.rs  render.rs  rng.rs  sound.rs  state.rs  status.rs  targeting.rs  test_support.rs  vision.rs
crates/core/src/generate/: carve.rs  doors.rs  ducts.rs  features.rs  hideouts.rs  sightlines.rs  walls.rs
crates/core/src/render/: help.rs  hud.rs
crates/core/src/state/: abilities.rs  tests.rs
crates/sim/: Cargo.toml  README.md
crates/sim/src/: bot.rs  harness.rs  lib.rs  main.rs  policy.rs  report.rs  usage.rs
crates/web/: Cargo.toml
crates/web/src/: input.rs  lib.rs
docs/: design.md  tickets-draft.md
web/: index.html
web/assets/: .gitkeep
