[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/web",
    "crates/sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tk-auto/intrusion"

# Shared, explicitly-pinned dependencies. The PRNG is load-bearing (§12.4):
# pin it exactly so the algorithm can never shift under us between releases.
[workspace.dependencies]
rand_core = "=0.9.3"
rand_pcg = "=0.9.0"

# Tests are dominated by CPU-bound facility generation (§10.6 seed sweeps), which
# runs ~20x slower unoptimized. Light optimization keeps the whole suite in
# seconds — locally and in CI's exhaustive INTRUSION_SLOW_TESTS run — while
# preserving debug assertions and debuginfo for test diagnostics.
[profile.test]
opt-level = 1
