[package]
name = "intrusion-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless harness: run N seeded games and emit balance metrics (§13.2). Placeholder for now."

[[bin]]
name = "sim"
path = "src/main.rs"

[dependencies]
intrusion-core = { path = "../core" }
