[package]
name = "intrusion-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin wasm-bindgen + canvas2d shell for Intrusion. Renders and feeds input to the pure core."

[lib]
# wasm-bindgen needs a cdylib to produce a wasm module; keep an rlib too so the
# native gate (`cargo test/clippy --workspace`) can still compile and lint it.
crate-type = ["cdylib", "rlib"]

[dependencies]
intrusion-core = { path = "../core" }
wasm-bindgen = "=0.2.100"
